# blueprint-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
hook_test/: test.py
tests/: test_hook_test.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  azure-pipelines.yaml  docker-compose.yml  pyproject.toml  test.py
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/tests/: dummy_test.py
