[tool.poetry]
name = "hook-test"
version = "0.1.0"
description = ""
authors = ["Thorben Jensen <jensen.thorben@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^7.7.1"
black = "^19.10b0"
pre-commit = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
